kubernetes/overlays/homelab/infrastructure/ingress-front/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-front
  namespace: default
  labels:
    app.kubernetes.io/name: ingress-front
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/version: "1.27"
    app.kubernetes.io/component: l4-proxy
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-front
      app.kubernetes.io/instance: homelab
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-front
        app.kubernetes.io/instance: homelab
        app.kubernetes.io/version: "1.27"
        app.kubernetes.io/component: l4-proxy
        app.kubernetes.io/part-of: homelab
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"name": "homelab-gateway-macvlan", "mac": "02:42:c0:a8:02:46"}]'
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
      volumes:
        - name: config
          configMap:
            name: ingress-front-config
